# Agentic-AI

./: README.md
01_basic_agents/: README.md
01_basic_agents/Daily-Planner-Agent/: Cargo.toml
01_basic_agents/File-Assistant/: README.md  build.sh
02_intermediate_agents/: README.md
02_intermediate_agents/LocalFileManager/: README.md
02_intermediate_agents/LocalFileManager/agent/: Cargo.toml
02_intermediate_agents/LocalFileManager/agent/src/: agent_core.rs  lib.rs  main.rs  ollama_integration.rs  tools.rs
03_advanced_agents/: README.md
Daily-Planner-Agent/: Cargo.toml  README.md  run.sh
Daily-Planner-Agent/agent_core/: Cargo.toml
Daily-Planner-Agent/ollama_config/: Cargo.toml
agentic_ai_architecture/: README.md
agentic_ai_architecture/connecting_llm_api/: Cargo.toml
agentic_ai_architecture/connecting_llm_api/src/: lib.rs
agentic_ai_architecture/core_agent_architecture/: Cargo.toml
autonomous_workflow_execution_and_planning/: Cargo.toml
autonomous_workflow_execution_and_planning/src/: lib.rs  local_planner.rs  memory_and_state_recall.rs
chat/: README.md
client-server/: README.md
connecting_llm_api/: README.md
connecting_llm_api/src/: ollama.rs  openai.rs
core_agent_architecture/: README.md
core_agent_architecture/src/: agent_traits_and_behavior_model.rs  lib.rs  message_passing_and_state_management.rs  task_execution_tool_invocation_error_handling.rs
grep/: README.md
grep/src/: lib.rs  main.rs
port_sniffer/: README.md
scanner/: README.md
sed/: Cargo.toml
tool_using_agents/: Cargo.toml
trackr/: Cargo.toml
(+44 files in other folders)
