[package]
name = "autonomous_workflow_execution_and_planning"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1"
serde_json = { version = "1.0.143" }
serde = { version = "1.0.219", features = ["derive"] }
tracing = { version = "0.1.41" }
chrono = { version = "0.4.41", features = ["serde"] }

core_agent_architecture = { path = "../core_agent_architecture" }