[package]
name = "connecting_llm_api"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest ={ version = "0.12.23", features = ["json", "blocking", "stream"]}
tokio = {version = "1.47.1", features = ["full"]}
serde = { version = "1.0.219", features = ["derive"]}
serde_json ={ version = "*"}
dotenv = {version = "*"}